--- a/src/less/register.less
+++ b/src/less/register.less
@@ -1,13 +1,21 @@
-.login {
+.register {
     .displayFlex(column, center, center);
     position: fixed;
     top:35%;
     left:50%;
     transform: translate(-50%, -50%);
+
+    .note {
+        font-size: 1.5rem;
+    }
+
+    button {
+        width: 20rem;
+    }
 }
 
 @media @phone{
-    .login{
+    .register{
         width:100%;
     }
 }
