--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -3,13 +3,16 @@ form {
     .displayFlex(column, center, center);
     
     label {
+        width:100%;
         .displayFlex();
         p {
+            width:17rem;
             padding:1rem;
         }
     }
 
     input {
+        width:60%;
         font-size: 1.75rem;
         align-self: center;
         border-radius: 1rem;
@@ -18,6 +21,6 @@ form {
     .error {
         font-size: 2rem;
         color:red;
-        padding:2rem;
+        margin:2rem;
     }
 }
