added styling for home component and familyMembers component

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -174,11 +174,41 @@ a {
 a:hover {
   text-decoration: underline;
 }
+.viewLinks {
+  width: 100%;
+  margin: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+.viewLinks a {
+  width: 35%;
+  padding: 2rem;
+}
+@media (max-width:500px) {
+  .viewLinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .viewLinks a {
+    width: 100%;
+  }
+}
 .App {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
   align-items: center;
+}
+@media (max-width:500px) {
+  .App {
+    max-width: 100%;
+  }
 }
 form {
   padding: 1rem;
@@ -186,6 +216,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: nowrap;
 }
 form label {
   width: 100%;
@@ -193,6 +224,7 @@ form label {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
+  flex-wrap: nowrap;
 }
 form label p {
   width: 17rem;
@@ -214,6 +246,7 @@ form .error {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: nowrap;
   position: fixed;
   top: 35%;
   left: 50%;
@@ -229,6 +262,7 @@ form .error {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: nowrap;
   position: fixed;
   top: 35%;
   left: 50%;
@@ -243,5 +277,31 @@ form .error {
 @media (max-width:500px) {
   .register {
     width: 100%;
+  }
+}
+.home {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+@media (max-width:500px) {
+  .home {
+    text-align: center;
+  }
+}
+.familyMembers {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+@media (max-width:500px) {
+  .familyMembers {
+    text-align: center;
   }
 }
