--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -1,9 +1,10 @@
 // Mixins Here
-.displayFlex(@direction:row,@justify:flex-start,@align:flex-start){
+.displayFlex( @direction:row, @justify:flex-start, @align:flex-start, @wrap:nowrap){
     display:flex;
     flex-direction: @direction;
     justify-content: @justify;
     align-items: @align;
+    flex-wrap: @wrap;
 }
 
 .imgCurve(){
