--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,8 +3,10 @@
 @import "reset";
 @import "global";
 @import "app";
+@import "navbar";
 @import "forms";
 @import "login";
 @import "register";
 @import "home";
 @import "familyMembers";
+@import "phone";
