added styling for viewing other peoples' wishlist

--- a/src/less/phone.less
+++ b/src/less/phone.less
@@ -23,5 +23,11 @@
         }
     }
 
+    .gift { 
+        .displayFlex(column, center, center);
+        width:100%;
+        p { text-align: center; }
+    }
+
 
 }
