--- a/src/css/index.css
+++ b/src/css/index.css
@@ -278,6 +278,46 @@ form .error {
   align-items: center;
   flex-wrap: nowrap;
 }
+.wishlist {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.gift {
+  margin: 2rem;
+  padding: 1rem;
+  width: 40%;
+  height: 25rem;
+  border: 0.2rem solid grey;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.gift h3 {
+  text-align: center;
+  font-size: 2rem;
+  padding-bottom: 1rem;
+}
+.gift p {
+  font-size: 1.5rem;
+}
+.gift button {
+  width: 75%;
+  padding: 1.5rem;
+}
+.gift a {
+  padding-bottom: 1rem;
+}
+.gift .purchased {
+  font-size: 2rem;
+  color: red;
+  padding-top: 1rem;
+}
 @media (max-width:500px) {
   .App {
     max-width: 100%;
@@ -309,5 +349,16 @@ form .error {
   }
   nav a {
     padding: 0.5rem;
+  }
+  .gift {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+  }
+  .gift p {
+    text-align: center;
   }
 }
