--- a/src/less/phone.less
+++ b/src/less/phone.less
@@ -24,7 +24,7 @@
     }
 
     .gift { 
-        .displayFlex(column, center, center);
+        .displayFlex(column, center, center, wrap);
         width:100%;
         p { text-align: center; }
     }
