--- a/src/less/wishlist.less
+++ b/src/less/wishlist.less
@@ -9,7 +9,7 @@
     height: 25rem;
     border: 0.2rem solid grey;
     border-radius: 1rem;
-    .displayFlex(column, flex-start, center);
+    .displayFlex(column, flex-start, center, wrap);
     h3 {
         text-align:center;
         font-size: 2rem;
