--- a/src/less/wishlist.less
+++ b/src/less/wishlist.less
@@ -2,6 +2,24 @@
     .displayFlex(row, space-evenly, center, wrap);
 }
 
+.viewList {
+    .displayFlex(column, center, center);
+}
+
+.editList {
+    .displayFlex(column, center, center);
+    
+    .add { 
+        width:20rem;
+        padding:0.75rem
+    }
+}
+
+.indexList {
+    .displayFlex(column, center, center);
+    padding-top: 2rem;
+}
+
 .gift {
     margin: 2rem;
     padding: 1rem;
