--- a/src/css/index.css
+++ b/src/css/index.css
@@ -303,6 +303,9 @@ form .error {
   width: 20rem;
   padding: 0.75rem;
 }
+.editList .gift:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 .indexList {
   display: flex;
   flex-direction: column;
