added a color scheme and added new styling to buttons

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,7 +1,11 @@
 .App {
-    max-width: 800px;
+    max-width: 1000px;
     width: 100%;
     margin: 0 auto;  
     align-items: center;
+    background-color: @app-background-color;
 }
 
+body { 
+    background-color: @body-background-color;
+}
