--- a/src/less/familyMembers.less
+++ b/src/less/familyMembers.less
@@ -1,4 +1,7 @@
 .familyMembers {
     margin:2rem;
     .displayFlex(column, center, center);
+    a { 
+        color: @family-link-color;
+    } 
 }
