--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -2,5 +2,8 @@ nav {
     width:100%;
     padding:3rem;
     .displayFlex(row, space-evenly, center, wrap);
-    background-color: grey; 
+    background-color: @nav-bg; 
+    a{
+        color:@nav-font;
+    }
 }
