--- a/src/css/index.css
+++ b/src/css/index.css
@@ -135,7 +135,7 @@ html {
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
-  color: #5E6164;
+  color: #37312C;
 }
 h1,
 h2,
@@ -143,7 +143,7 @@ h3,
 h4,
 h5 {
   font-family: 'Russo One', sans-serif;
-  color: #23293B;
+  color: #37312C;
 }
 h2 {
   font-size: 4rem;
@@ -161,14 +161,23 @@ p {
   margin: 0 auto;
 }
 button {
-  font-size: 1.75rem;
-  border-radius: 1rem;
-  width: 10rem;
-  margin: 2rem;
+  color: #701916;
+  font-size: 2rem;
+  padding: 1rem;
+  border: 4px solid #701916;
+  border-radius: 6px;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
+}
+button:hover {
+  color: #C73529;
+  border-color: #C73529;
+  border-radius: 50px;
+  transition: all 0.3s ease 0s;
 }
 a {
-  font-size: 2rem;
-  color: blue;
+  font-size: 2.5rem;
+  color: #F7F7F9;
   text-decoration: none;
 }
 a:hover {
@@ -188,10 +197,14 @@ a:hover {
   padding: 2rem;
 }
 .App {
-  max-width: 800px;
+  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
   align-items: center;
+  background-color: #F7F7F9;
+}
+body {
+  background-color: #F7F7F9;
 }
 nav {
   width: 100%;
@@ -201,7 +214,10 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  background-color: grey;
+  background-color: #701916;
+}
+nav a {
+  color: #F7F7F9;
 }
 form {
   padding: 1rem;
@@ -278,6 +294,9 @@ form .error {
   align-items: center;
   flex-wrap: nowrap;
 }
+.familyMembers a {
+  color: #701916;
+}
 .wishlist {
   display: flex;
   flex-direction: row;
@@ -315,11 +334,12 @@ form .error {
   padding-top: 2rem;
 }
 .gift {
+  background-color: #AFA2A5;
   margin: 2rem;
   padding: 1rem;
   width: 40%;
   height: 25rem;
-  border: 0.2rem solid grey;
+  border: 0.3rem solid #701916;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -329,15 +349,14 @@ form .error {
 }
 .gift h3 {
   text-align: center;
-  font-size: 2rem;
+  font-size: 3rem;
   padding-bottom: 1rem;
 }
 .gift p {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 .gift button {
-  width: 75%;
-  padding: 1.5rem;
+  margin: 0.5rem;
 }
 .gift a {
   padding-bottom: 1rem;
