--- a/src/less/global.less
+++ b/src/less/global.less
@@ -37,15 +37,25 @@
   }
 
   button {
-    font-size:1.75rem;
-    border-radius: 1rem;
-    width:10rem;
-    margin:2rem;
+    color: @button-color;
+    font-size: 2rem;
+    padding: 1rem;
+    border: 4px solid @button-color;
+    border-radius: 6px;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+  }
+
+  button:hover {
+    color:@button-hover;
+    border-color: @button-hover;
+    border-radius: 50px;
+    transition: all 0.3s ease 0s;
   }
 
   a {
-      font-size:2rem;
-      color:blue;
+      font-size: 2.5rem;
+      color: @link-color;
       text-decoration: none;
   }
 
