--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,27 +1,33 @@
 // Variables
 
 // Color pointers
-@nav-bg: @wild-sand;
-@nav-font: @river-bend;
-@nav-border: @sea-shell;
+@link-color: @snow-grey;
+@family-link-color: @dark-red;
+@button-color: @dark-red;
+@button-hover: @christmas-red;
 
-@header-font-color: @ebony-clay;
-@main-font-color: @shuttle-gray;
-@main-border-color: @border-real;
+@nav-bg: @dark-red;
+@nav-font: @snow-grey;
 
-@footer-background: @wild-sand;
-@footer-font-color: @waterloo;
+@header-font-color: @dark-brown;
+@main-font-color: @dark-brown;
+
+@app-background-color: @snow-grey;
+@body-background-color: @snow-grey;
+
+@gift-background-color: @light-brown;
+@gift-border-color: @dark-red;
+// @main-border-color: @border-real;
+
+// @footer-background: @wild-sand;
+// @footer-font-color: @waterloo;
 
 // Color Vars
-@wild-sand: #F6F6F6;
-@river-bend: #454A59;
-@sea-shell: #F1F1F1;
-@ebony-clay: #23293B;
-@shuttle-gray: #5E6164;
-@porcelain: #F6F7F8;
-@waterloo: #81848E;
-@btn-bg-color: #22283A;
-@border-real: #dee2e6;
+@christmas-red: #C73529;
+@dark-red: #701916;
+@snow-grey: #F7F7F9;
+@dark-brown: #37312C;
+@light-brown: #AFA2A5;
 
 // Mobile var
 @phone: ~"(max-width:500px)";
