--- a/src/less/wishlist.less
+++ b/src/less/wishlist.less
@@ -24,24 +24,24 @@
 }
 
 .gift {
+    background-color: @gift-background-color;
     margin: 2rem;
     padding: 1rem;
     width:40%;
     height: 25rem;
-    border: 0.2rem solid grey;
+    border: 0.3rem solid @gift-border-color;
     border-radius: 1rem;
     .displayFlex(column, flex-start, center, wrap);
     h3 {
         text-align:center;
-        font-size: 2rem;
+        font-size: 3rem;
         padding-bottom: 1rem;
     }
     p { 
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
     button { 
-        width:75%;
-        padding:1.5rem;
+        margin: 0.5rem;
     }
     a {
         padding-bottom: 1rem;
