--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -5,6 +5,8 @@
 @family-link-color: @dark-red;
 @button-color: @dark-red;
 @button-hover: @christmas-red;
+@divider-color: @dark-brown;
+
 
 @nav-bg: @dark-red;
 @nav-font: @snow-grey;
@@ -17,6 +19,7 @@
 
 @gift-background-color: @light-brown;
 @gift-border-color: @dark-red;
+@purchased-color: @christmas-red;
 // @main-border-color: @border-real;
 
 // @footer-background: @wild-sand;
