--- a/src/less/global.less
+++ b/src/less/global.less
@@ -40,7 +40,7 @@
     color: @button-color;
     font-size: 2rem;
     padding: 1rem;
-    border: 4px solid @button-color;
+    border: 2px solid @button-color;
     border-radius: 6px;
     display: inline-block;
     transition: all 0.3s ease 0s;
@@ -49,7 +49,7 @@
   button:hover {
     color:@button-hover;
     border-color: @button-hover;
-    border-radius: 50px;
+    border-radius: 5rem;
     transition: all 0.3s ease 0s;
   }
 
@@ -71,6 +71,12 @@
         width:35%;
         padding:2rem;
     }
+}
+
+hr.solid { 
+  width:75%;
+  margin: 2rem;
+  border-top: 3px solid @divider-color;
 }
 
   
