wrapped form buttons in a divider for add, edit gift, and confirm purchase

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -16,6 +16,10 @@
     font-family: 'Russo One', sans-serif;
     color: @header-font-color;
   }
+
+  h1 { 
+    font-size: 5rem;
+  }
   
   h2 {
     font-size: 4rem;
