--- a/src/less/phone.less
+++ b/src/less/phone.less
@@ -29,5 +29,29 @@
         p { text-align: center; }
     }
 
+    .buttons { 
+        width:95%;
+    }
+    
+    .confirmPurchase { 
+        text-align: center;
+    }
+
+    .editForm { 
+        label { 
+            width:100%;
+            .displayFlex(column, flex-start, center);
+        }
+        input { 
+            width:100%;
+            margin-bottom:1rem;
+        }
+        p { 
+            width:100%;
+        }
+        textarea { 
+            width:100%;
+        }
+     }
 
 }
