--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -29,6 +29,7 @@ form {
         font-size: 16px;
         resize: none;
         margin:2rem 0rem;
+        font-family:"Times New Roman", Times, serif;
       }
 
     .error {
