--- a/src/less/login.less
+++ b/src/less/login.less
@@ -4,4 +4,11 @@
     top:35%;
     left:50%;
     transform: translate(-50%, -50%);
+    a { 
+        color: @family-link-color;
+    }
+
+    button { 
+        margin: 1rem 0rem;
+    }
 }
