--- a/src/less/register.less
+++ b/src/less/register.less
@@ -10,6 +10,11 @@
     }
 
     button {
+        margin:1rem 0rem;
         width: 20rem;
+    }
+
+    a { 
+        color: @family-link-color;
     }
 }
