--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -26,7 +26,7 @@ form {
         border: 2px solid #ccc;
         border-radius: 4px;
         background-color: #f8f8f8;
-        font-size: 16px;
+        font-size: 2rem;
         resize: none;
         margin:2rem 0rem;
         font-family:"Times New Roman", Times, serif;
