--- a/src/less/phone.less
+++ b/src/less/phone.less
@@ -3,6 +3,11 @@
         max-width: 100%;
     }
 
+    .landing { 
+        width:100%;
+        
+    }
+
     .viewLinks {
         .displayFlex(column, center, center);
         a { width:100%; }
