--- a/src/css/index.css
+++ b/src/css/index.css
@@ -256,7 +256,7 @@ form input {
 }
 form textarea {
   width: 60%;
-  height: 150px;
+  height: 15rem;
   padding: 1rem 2rem;
   box-sizing: border-box;
   border: 2px solid #ccc;
