--- a/src/less/global.less
+++ b/src/less/global.less
@@ -35,7 +35,7 @@
   }
   
   .container {
-    max-width: 800px;
+    max-width: 80rem;
     width: 100%;
     margin: 0 auto;  
   }
@@ -44,8 +44,8 @@
     color: @button-color;
     font-size: 2rem;
     padding: 1rem;
-    border: 2px solid @button-color;
-    border-radius: 6px;
+    border: 0.2rem solid @button-color;
+    border-radius: 0.6rem;
     display: inline-block;
     transition: all 0.3s ease 0s;
   }
@@ -80,7 +80,7 @@
 hr.solid { 
   width:75%;
   margin: 2rem;
-  border-top: 3px solid @divider-color;
+  border-top: 0.3rem solid @divider-color;
 }
 
   
