changed all px values to rem values in mixins.less

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -8,7 +8,7 @@
 }
 
 .imgCurve(){
-    border-radius: 5px;
+    border-radius: 0.5rem;
 }
 
 .button(@color,@bgColor,@borderRad){
@@ -17,7 +17,7 @@
     color:@color;
     background-color: @bgColor;
     border-radius: @borderRad;
-    padding: 15px;
+    padding: 1.5rem;
     text-align:center;
 
 }
