--- a/src/less/phone.less
+++ b/src/less/phone.less
@@ -10,7 +10,7 @@
 
     .viewLinks {
         .displayFlex(column, center, center);
-        a { width:100%; }
+        button { width:100%; }
     } 
 
     .familyMembers { text-align: center }
