--- a/src/less/global.less
+++ b/src/less/global.less
@@ -71,9 +71,10 @@
     width:100%;
     margin:2rem;
     .displayFlex(row, space-between, stretch, wrap);
-    a {
+    button {
         width:35%;
         padding:2rem;
+        margin-bottom: 1rem;
     }
 }
 
