--- a/src/css/index.css
+++ b/src/css/index.css
@@ -216,26 +216,22 @@ body {
   background-color: #F7F7F9;
 }
 nav {
-  position: fixed;
-  top: 15px;
-  left: 50%;
-  width: 75%;
-  transform: translateX(-50%);
-  display: inline-block;
-  border: 2px solid #EBECF1;
-  border-radius: 30px;
-  animation: slide-in 1s ease-out;
+  margin: 1rem 0;
+  width: 100%;
+  border: 2px solid #AFA2A5;
+  background-color: #F7F7F9;
+  border-radius: 3rem;
 }
 ul {
   position: relative;
   display: flex;
   flex: 1 1 auto;
   margin: 0;
-  padding: 0 30px;
+  padding: 0 3rem;
   list-style-type: none;
 }
 ul li:not(:last-child) {
-  margin-right: 40px;
+  margin-right: 4rem;
 }
 ul li {
   border: 2px solid transparent;
@@ -244,12 +240,24 @@ ul li {
   transition: background 0.2s;
 }
 ul li a {
-  color: #2375D8;
+  color: #37312C;
   text-decoration: none;
-  text-transform: uppercase;
   transition: color 0.2s;
 }
-ul li ul {
+ul li:hover {
+  background: #701916;
+  border: 2px solid #701916;
+  border-right: 2px solid #701916;
+  border-bottom: 2px solid #701916;
+}
+ul li:hover a {
+  color: #F9F8FD;
+}
+ul li:hover .famNav {
+  visibility: visible;
+  opacity: 1;
+}
+.famNav {
   visibility: hidden;
   opacity: 0;
   position: absolute;
@@ -258,54 +266,16 @@ ul li ul {
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: nowrap;
-  margin: 12px -12px;
+  margin: 1.2rem -1.2rem;
   width: 17rem;
   padding: 0;
-  background: #FFA91B;
-  border: 2px solid #F7C833;
-  border-right: 2px solid #F89329;
-  border-bottom: 2px solid #F89329;
-  border-radius: 5px;
+  background: #C73529;
   transition: opacity 0.2s, visibility 0.2s;
 }
-ul li ul li {
-  margin: -2px 0 0 -2px;
-  width: calc(100% - 20px);
+.famNav li {
+  padding: 1rem;
+  width: 100%;
   line-height: 1.7;
-}
-ul li ul li a {
-  color: #2375D8;
-}
-ul li:hover {
-  background: #EC4138;
-  border: 2px solid #F05749;
-  border-right: 2px solid #E02A21;
-  border-bottom: 2px solid #E02A21;
-}
-ul li:hover a {
-  color: #F9F8FD;
-}
-ul li:hover ul {
-  visibility: visible;
-  opacity: 1;
-  box-shadow: 0px 3px 5px 2px #EBECF1;
-}
-ul li:hover ul li a {
-  color: #F9F8FD;
-}
-@keyframes slide-in {
-  0% {
-    top: -50px;
-  }
-  40% {
-    top: 20px;
-  }
-  70% {
-    top: 10px;
-  }
-  100% {
-    top: 15px;
-  }
 }
 form {
   padding: 1rem;
