changed navbar phone settings to fit more inline for phone screens. removed container in global.less

--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -3,7 +3,7 @@
   nav {
     margin:1rem 0;
     width:100%;
-    border: 2px solid @light-brown;
+    border: 0.2rem solid @light-brown;
     background-color: @snow-grey;
     border-radius: 3rem;
   }
@@ -19,9 +19,9 @@
       margin-right: 4rem;
     }
     li {
-      border: 2px solid transparent;
-      border-radius: 5px;
-      padding: 10px;
+      border: 0.2rem solid transparent;
+      border-radius: 0.5rem;
+      padding: 1rem;
       transition: background 0.2s;
       a {
         color: @dark-brown;
@@ -30,9 +30,9 @@
       }
       &:hover {
         background: @dark-red;
-        border: 2px solid @dark-red;
-        border-right: 2px solid @dark-red;
-        border-bottom: 2px solid @dark-red;
+        border: 0.2rem solid @dark-red;
+        border-right: 0.2rem solid @dark-red;
+        border-bottom: 0.2rem solid @dark-red;
         a {
           color: #F9F8FD;
         }
