--- a/src/css/index.css
+++ b/src/css/index.css
@@ -158,11 +158,6 @@ p {
   font-size: 2.5rem;
   line-height: 1.4;
 }
-.container {
-  max-width: 80rem;
-  width: 100%;
-  margin: 0 auto;
-}
 button {
   color: #701916;
   font-size: 2rem;
@@ -218,7 +213,7 @@ body {
 nav {
   margin: 1rem 0;
   width: 100%;
-  border: 2px solid #AFA2A5;
+  border: 0.2rem solid #AFA2A5;
   background-color: #F7F7F9;
   border-radius: 3rem;
 }
@@ -234,9 +229,9 @@ ul li:not(:last-child) {
   margin-right: 4rem;
 }
 ul li {
-  border: 2px solid transparent;
-  border-radius: 5px;
-  padding: 10px;
+  border: 0.2rem solid transparent;
+  border-radius: 0.5rem;
+  padding: 1rem;
   transition: background 0.2s;
 }
 ul li a {
@@ -246,9 +241,9 @@ ul li a {
 }
 ul li:hover {
   background: #701916;
-  border: 2px solid #701916;
-  border-right: 2px solid #701916;
-  border-bottom: 2px solid #701916;
+  border: 0.2rem solid #701916;
+  border-right: 0.2rem solid #701916;
+  border-bottom: 0.2rem solid #701916;
 }
 ul li:hover a {
   color: #F9F8FD;
@@ -531,6 +526,11 @@ form .error {
 @media (max-width:500px) {
   .App {
     max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
   }
   .landing {
     width: 100%;
@@ -558,10 +558,7 @@ form .error {
     width: 100%;
   }
   nav {
-    padding: 1rem;
-  }
-  nav a {
-    padding: 0.5rem;
+    width: 95%;
   }
   .gift {
     display: flex;
