--- a/src/less/phone.less
+++ b/src/less/phone.less
@@ -1,6 +1,7 @@
 @media @phone {
     .App {
         max-width: 100%;
+        .displayFlex(column, center, center)
     }
 
     .landing { 
@@ -22,10 +23,7 @@
     .register { width:100%; }
 
     nav { 
-        padding:1rem;
-        a { 
-            padding: 0.5rem;
-        }
+      width:95%;
     }
 
     .gift { 
