--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -24,6 +24,7 @@
       padding: 1rem;
       transition: background 0.2s;
       a {
+        border: none;
         color: @dark-brown;
         text-decoration: none;
         transition: color 0.2s;
@@ -35,6 +36,8 @@
         border-bottom: 0.2rem solid @dark-red;
         a {
           color: #F9F8FD;
+          width: 100%;
+          height: 100%;
         }
         .famNav {
           visibility: visible;
@@ -52,7 +55,7 @@
     margin: 1.2rem -1.2rem;
     width: 17rem;
     padding: 0;
-    background: @christmas-red;
+    background: @dark-brown;
     
     transition: opacity 0.2s, visibility 0.2s;
     li {
