--- a/src/less/wishlist.less
+++ b/src/less/wishlist.less
@@ -11,7 +11,8 @@
     
     .add { 
         width:20rem;
-        padding:0.75rem
+        padding:0.75rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -21,8 +22,7 @@
 }
 
 .gift {
-    background-color: @gift-background-color;
-    margin: 2rem;
+    margin: 0.5rem;
     padding: 1rem;
     width:45%;
     border: 0.3rem solid @gift-border-color;
@@ -32,15 +32,17 @@
     h3 {
         text-align:center;
         font-size: 3rem;
-        padding-bottom: 1rem;
     }
     p { 
+        text-align: justify;
+        margin: 1rem;
         font-size: 2rem;
     }
     button { 
         margin: 0.5rem;
     }
     a {
+        background-color: @snow-grey;
         padding-bottom: 1rem;
     }
     .purchased {
